Skip this test since it won't work after Java 8 with specific JVM params